Se removio la descripcion de los endpoints de la api
